// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range component The Rendered HTML should have a label 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Range Label
    <input
      max="100"
      min="0"
      step="1"
      type="range"
      value="50"
    />
  </label>
  <span>
    50
  </span>
</div>
`;

exports[`Range component handling input should set a value when passed in 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <input
      max="100"
      min="0"
      step="1"
      type="range"
      value="23"
    />
  </label>
  <span>
    23
  </span>
</div>
`;

exports[`Range component handling input should update a value when changed in 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <input
      max="100"
      min="0"
      step="1"
      type="range"
      value="23"
    />
  </label>
  <span>
    23
  </span>
</div>
`;
